# networkSPICE

./: .gitignore  CMakeLists.txt  README.md  independentSourceNetlistDefinition.txt
include/spiceLib/: BJT.h  Branch.h  BranchStorage.h  Capacitor.h  CircuitElement.h  Component.h  ComponentStorage.h  CurrentControlledCurrentSource.h  CurrentControlledVoltageSource.h  CurrentSource.h  NodeStorage.h  OneBranchComponent.h  OpAmp.h  Spice.h  ThreeTerminalsComponent.h  TransientSimulation.h  TwoTerminalsComponent.h  VoltageControlledCurrentSource.h  VoltageControlledVoltageSource.h  VoltageSource.h
lib/: libzmq.so.4.2.0
messages/: CMakeLists.txt  component.proto  netlist.proto  result.proto  results.proto  simulationrequest.proto  ventilator.py
spiceLib/: BJT.cpp  BJT.h  Branch.cpp  Branch.h  BranchStorage.cpp  BranchStorage.h  Capacitor.cpp  Capacitor.h  CircuitElement.cpp  CircuitElement.h  Component.cpp  Component.h  ComponentStorage.cpp  ComponentStorage.h  CurrentControlledCurrentSource.cpp  CurrentControlledCurrentSource.h  CurrentControlledVoltageSource.cpp  CurrentControlledVoltageSource.h  CurrentSource.cpp  CurrentSource.h  FileManager.cpp  FileManager.h  FourTerminalsComponent.cpp  FourTerminalsComponent.h  FrequencySimulation.cpp  FrequencySimulation.h  IndependentSource.cpp  IndependentSource.h  Inductor.cpp  Inductor.h  Node.cpp  Node.h  NodeStorage.cpp  NodeStorage.h  OneBranchComponent.cpp  OneBranchComponent.h  OpAmp.cpp  OpAmp.h  Resistor.cpp  Resistor.h  (+22 more)
src/messages/: component.pb.cc  component.pb.h  netlist.pb.cc  netlist.pb.h  result.pb.cc  result.pb.h
src/server/: RL.net  RLC.net  RLC1.net  component_pb2.py  netlist.txt  resultPlotter.py  resultReader.py  resultReceiver.py  results_pb2.py  simulationrequest_pb2.py  sink.py  ventilator.py
src/simulationNode/: main.cpp
src/simulationNode/include/: netlistfuncs.h
src/simulationNode/src/: main.cpp  netlistfuncs.cpp
src/spiceLib/: BJT.cpp  Branch.cpp  BranchStorage.cpp  Capacitor.cpp  CircuitElement.cpp  Component.cpp  ComponentStorage.cpp  CurrentControlledCurrentSource.cpp  CurrentControlledVoltageSource.cpp  FileManager.cpp  FourTerminalsComponent.cpp  FrequencySimulation.cpp  IndependentSource.cpp  Node.cpp  NodeStorage.cpp  OneBranchComponent.cpp  Simulation.cpp  Spice.cpp  Storage.cpp  TransientSimulation.cpp  TwoBranchesComponent.cpp  VoltageControlledVoltageSource.cpp  VoltageSource.cpp
src/userInterface/: userInterface.py
